Fix navbar visibility

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,10 +43,21 @@
 
 @media only screen and (max-width: 520px) {
 
+
+    .navbar {
+        justify-content: center;
+    }
+    
     .navList {
         top: -200px;
         flex-direction: column;
         transition: all 800ms ease;
+    }
+
+    .v-nav {
+        opacity: 0;
+        visibility: hidden;
+        transition: all 300ms ease;
     }
 
     .menu {
