--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body::-webkit-scrollbar {
     position: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     padding: 7px;
     color: #E9E9E9;
@@ -39,15 +38,15 @@ body::-webkit-scrollbar {
     transition: all 0.7s ease;
 }
 
+.v-nav {
+    opacity: 1;
+    visibility: visible;
+    transition: all 300ms ease;
+}
+
 .navList {
     display: flex;
     flex-direction: row;
-}
-
-.v-nav {
-    opacity: 0;
-    visibility: hidden;
-    transition: all 300ms ease;
 }
 
 .navbar ul{
